<resources>
    <string name="app_name">WorkTracker</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="select_a_territory">Select a Territory</string>
    <string name="territory">Territory</string>
    <string name="select_territory">Select Territory</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>

    <string name="productList">Product List Page</string>
    <string name="back">Back</string>
    <string name="products">Products</string>

    <string name="activityTracker">Activity Tracker</string>
    <string name="activities">Activities</string>
    <string name="date">Date</string>
    <string name="typeActivity">Type of Activity</string>
    <string name="targetCrops">Target Crops</string>
    <string name="attendance">Attendance</string>
    <string name="productSales">Product Sales</string>
    <string name="activityCost">Activity Cost</string>
    <string name="status">Status</string>

    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="empty">At least 1 field is empty</string>

    <string-array name="Territories">
        <item>North Luzon</item>
        <item>West Luzon</item>
        <item>East Luzon</item>
        <item>South Luzon</item>
        <item>Central Luzon 1</item>
        <item>Central Luzon 2</item>
        <item>North Highland Luzon</item>
        <item>Cebu</item>
        <item>Negros</item>
        <item>Iloilo</item>
        <item>North Mindanao 1</item>
        <item>North Mindanao 2</item>
        <item>West Mindanao</item>
        <item>South Mindanao 1</item>
        <item>South Mindanao 2</item>
        <item>South Mindanao 3</item>
        <item>East Mindanao</item>

    </string-array>
</resources>