<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout" />

    <Button
        android:id="@+id/productListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/productList" />

    <Button
        android:id="@+id/activityTrackerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityTracker" />

</LinearLayout>